add grandchild component to test passing data from grandparent

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -8,7 +8,7 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 
-<app-my-widget [count]=23 [title]="'My Widget Title'"/>
+<app-my-widget [count]=23 [title]="'My Widget Title'" [messageFromApp]="messageForSecond"/>
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * * -->
