--- a/src/app/my-widget/my-widget.html
+++ b/src/app/my-widget/my-widget.html
@@ -13,6 +13,7 @@
   @else {
     <p>Header is not visible</p>
   }
+  <app-second [message]="messageForSecond" [messageFromApp]="messageFromApp"></app-second>
 
 </div>
 
