Create @Output to pass values up to parent component

--- a/src/app/my-widget/my-widget.html
+++ b/src/app/my-widget/my-widget.html
@@ -13,7 +13,7 @@
   @else {
     <p>Header is not visible</p>
   }
-  <app-second [message]="messageForSecond" [messageFromApp]="messageFromApp"></app-second>
+  <app-second [message]="messageForSecond" [messageFromApp]="messageFromApp" (reply)="handleReplyFromSecond($event)"></app-second>
 
 </div>
 
