clean up component layout following implementation of routing

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -7,8 +7,8 @@
 <!-- * * * * * * * to get started with your project! * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
+<h1>Hello from the App component</h1>
 
-<app-my-widget [count]=23 [title]="'My Widget Title'" [messageFromApp]="messageForSecond"/>
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * * -->
