--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -1,2 +1,4 @@
 <h2>Welcome to the Home Page</h2>
 <a routerLink="/about">Go to About</a>
+
+<app-my-widget [count]=23 [title]="'My Widget Title'" [messageFromApp]="messageForSecond"/>
